[package]
name = "typhoon"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
uuid = { version = "1.4", features = ["v4"] }
rustyline = "15.0.0"
colored = "2"
